--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,32 @@
-<h2>List of Messages</h2>
-<div data-spy="scroll" >
-  <table class="table table-striped" width="30%">
-    <thead>
-      <tr>
-        <th scope="col">Message Id</th>
-        <th scope="col">currencyFrom</th>
-        <th scope="col">currencyTo</th>
-        <th scope="col">User</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let data of marketDataList">
-        <td scope="row">{{data.id}}</td>
-        <td scope="row">{{data.currencyFrom}}</td>
-        <td scope="row">{{data.currencyTo}}</td>
-        <td scope="row">{{data.userId}}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="row">
+  <div class="col-6">
+    <h3>List of Messages</h3>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Message Id</th>
+          <th scope="col">currencyFrom</th>
+          <th scope="col">currencyTo</th>
+          <th scope="col">User</th>
+          <th scope="col">Time Placed</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let data of marketDataList">
+          <td scope="row">{{data.id}}</td>
+          <td scope="row">{{data.currencyFrom}}</td>
+          <td scope="row">{{data.currencyTo}}</td>
+          <td scope="row">{{data.userId}}</td>
+          <td scope="row">{{data.timePlaced}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <h3>EUR to USD Chart</h3>
+  <ag-charts-angular
+  style="top: 0; right: 0; bottom: 0; left: 0;"
+  [options]="options">
+</ag-charts-angular>
 </div>
